--- a/hello_swift_slots/pubspec.yaml
+++ b/hello_swift_slots/pubspec.yaml
@@ -36,11 +36,14 @@ dependencies:
   firebase_core: ^3.0.0
   firebase_auth: ^5.0.0
   cloud_firestore: ^5.0.0
+  cloud_functions: ^5.0.0
   flutter_dotenv: ^5.1.0
   flutter_hooks: ^0.20.5
   go_router: 13.2.4
   hooks_riverpod: ^2.5.1
   intl: ^0.19.0
+  flutter_web_plugins:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
