--- a/firebase.json
+++ b/firebase.json
@@ -3,9 +3,13 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
+  "functions": {
+    "source": "functions"
+  },
   "emulators": {
     "firestore": { "port": 8080 },
     "auth": { "port": 9099 },
+    "functions": { "port": 5001 },
     "ui": { "enabled": true }
   }
 }
