--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,10 @@
     "serve": "firebase emulators:start --only functions,firestore",
     "shell": "firebase functions:shell",
     "deploy": "firebase deploy --only functions",
-    "lint": "eslint \"src/**/*.ts\""
+    "lint": "eslint \"src/**/*.ts\"",
+    "setup": "ts-node scripts/setupEnv.ts",
+    "seed": "ts-node scripts/seedTestData.ts",
+    "deploy:full": "npm run build && firebase deploy --only functions,firestore:indexes"
   },
   "dependencies": {
     "firebase-admin": "^12.0.0",
@@ -21,7 +24,9 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
+    "dotenv": "^16.6.1",
     "eslint": "^8.57.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.0"
   }
 }
