--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint \"src/**/*.ts\"",
     "setup": "ts-node scripts/setupEnv.ts",
     "seed": "ts-node scripts/seedTestData.ts",
-    "deploy:full": "npm run build && firebase deploy --only functions,firestore:indexes"
+    "deploy:full": "npm run build && firebase deploy --only functions,firestore:indexes",
+    "init": "ts-node scripts/initProject.ts"
   },
   "dependencies": {
     "firebase-admin": "^12.0.0",
