--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
     "setup": "ts-node scripts/setupEnv.ts",
     "seed": "ts-node scripts/seedTestData.ts",
     "deploy:full": "npm run build && firebase deploy --only functions,firestore:indexes",
-    "init": "ts-node scripts/initProject.ts"
+    "init": "ts-node scripts/initProject.ts",
+    "local": "bash ../scripts/runLocal.sh"
   },
   "dependencies": {
     "firebase-admin": "^12.0.0",
